--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.3.3",
     "ejs-locals": "^1.0.2",
     "express": "~4.13.1",
+    "jwt-simple": "^0.4.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
